Fix header background dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -220,6 +220,10 @@
         unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
     }
 
+    html {
+        @apply bg-bgl-primary dark:bg-bgd-primary;
+    }
+
     body {
         @apply bg-bgl-secondary font-poppins text-[0.875rem] text-black dark:bg-bgd-secondary dark:text-rgba-white;
     }
@@ -498,7 +502,7 @@
     }
 
     header {
-        @apply fixed top-0 left-0 flex flex-row-reverse gap-x-[0.938rem] flex-wrap w-full bg-bgl-primary z-50 md:left-[0.938rem] md:flex-col md:gap-[0.5rem] md:w-[4.125rem] md:mt-[2.188rem] md:bg-transparent lg:static lg:basis-[4.125rem] dark:bg-bgd-primary;
+        @apply fixed top-0 left-0 flex flex-row-reverse gap-x-[0.938rem] flex-wrap w-full bg-bgl-primary z-50 md:left-[0.938rem] md:flex-col md:gap-[0.5rem] md:w-[4.125rem] md:mt-[2.188rem] md:!bg-transparent lg:static lg:basis-[4.125rem] dark:bg-bgd-primary;
     }
 
     .header-container {
